updated design docs

--- a/written/software_design.tex
+++ b/written/software_design.tex
@@ -111,12 +111,12 @@ The normalizing flows library and autograd functionality of Tensorflow are used 
 \begin{tikzpicture} 
 \begin{umlpackage}{epi}
 \umlclass{Model}{ 
-  \# \_name : string \\ 
-  \# \_parameters : list of parameters \\ 
+  + name : string \\ 
+  + parameters : list of parameters \\ 
   }
   { 
-  + set\_name() \\
-  + set\_parameters() \\
+  \# \_set\_name() \\
+  \# \_set\_parameters() \\
   + set\_eps() \\
   + eps() \\
   + epi() \\
@@ -124,55 +124,52 @@ The normalizing flows library and autograd functionality of Tensorflow are used 
 }
 
 \umlclass[x=7, y=0]{Parameter}{ 
-  \# \_name : string \\ 
-  \# \_range : [float, float] \\ 
+  + name : string \\ 
+  + bounds : [float, float] \\ 
   }
   { 
-  + set\_name() \\
-  + set\_range() \\
+  \# \_set\_name() \\
+  \# \_set\_bounds() \\
 } 
 
 \umlclass[x=0, y=-6]{Architecture}{ 
-  \# \_type : string \\ 
-  \# \_num\_layers : pos int \\ 
-  \# \_post\_affine : bool \\
+  + arch\_type : string \\ 
+  + num\_layers : pos int \\ 
+  + post\_affine : bool \\
   }
   { 
-  + set\_type() \\
-  + set\_num\_layers() \\
-  + set\_post\_affine() \\
+  + \_\_call\_\_() \\
+  + \_set\_type() \\
+  + \_set\_num\_layers() \\
+  + \_set\_post\_affine() \\
   + to\_string() \\
   + to\_model() \\
 } 
 
 \umlclass[x=-1, y=-12]{CouplingArch}{ 
-  \# \_type : string \\ 
-  \# \_repeats : pos int \\ 
-  \# \_num\_couplings : pos int \\ 
-  \# \_layers\_per\_coupling : pos int \\ 
-  \# \_units\_per\_layer : pos int \\ 
+  + D : pos int \\ 
+  + num\_couplings : pos int \\
+  + num\_units : pos int \\  
   }
   { 
-  + set\_repeats() \\
-  + set\_num\_couplings() \\
-  + set\_layers\_per\_coupling() \\
-  + set\_units\_per\_layer() \\
+  + \_\_call\_\_() \\
+  \# \_set\_D() \\
+  \# \_set\_num\_couplings() \\
+  \# \_set\_num\_units() \\
   + to\_string() \\
-  + to\_model() \\
 }
 
 \umlclass[x=6, y=-12]{AutoregressiveArch}{ 
-  \# \_type : string \\ 
-  \# \_repeats : pos int \\ 
-  \# \_layers\_per\_conditional : pos int \\ 
-  \# \_units\_per\_layer : pos int \\ 
+  + D : pos int \\ 
+  + num\_couplings : pos int \\
+  + num\_units : pos int \\  
   }
   { 
-  + set\_repeats() \\
-  + set\_layers\_per\_conditional() \\
-  + set\_units\_per\_layer() \\
+  + \_\_call\_\_() \\
+  \# \_set\_D() \\
+  \# \_set\_num\_ars() \\
+  \# \_set\_num\_units() \\
   + to\_string() \\
-  + to\_model() \\
 }
 
 \umlclass[x=6, y=-6]{Distribution}{ 
