--- a/notebooks/Getting_Started_with_EPI.ipynb
+++ b/notebooks/Getting_Started_with_EPI.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The epi python package implements emergent property inference (EPI) as described in [Bittner et al. 2019](https://www.biorxiv.org/content/10.1101/837567v2.abstract).  EPI learns distributions of model parameters that produce the emergent properties (or statistics) of interest, through optimization using deep learning.  EPI allows scientists to reason about the parametric sensitivity and robustness of models with respect ot the statistics (or \"emergent properties\") of their activity.  \n",
     "\n",
-    "In this tutorial, we will use EPI to infer the maximum entropy distribution of 2D linear dynamical system coefficients that produce oscillations near 1Hz.  In the subsequent tutorials, we will dive into the details of [augented Lagrangian optimization](link), [normalizing flow architectures](link), and [conditioning maximum-entropy distributions](link).  Those with specific use cases can also refer to [conditioning on data](link), and [consistency equations](link).\n",
+    "In this tutorial, we will use EPI to infer the maximum entropy distribution of 2D linear dynamical system coefficients that produce oscillations near 1Hz.  For now, we'll focus on the basic functionality of the package.  In the subsequent tutorials, we will dive into the details of [augented Lagrangian optimization](link), [normalizing flow architectures](link), and [conditioning maximum-entropy distributions](link).  Those with specific use cases can also refer to [conditioning on data](link), and [consistency equations](link).\n",
     "\n",
     "Throughout the tutorial, please refer to the API documentation at [https://epi.readthedocs.io/en/latest/API.html](https://epi.readthedocs.io/en/latest/API.html).\n",
     "\n",
@@ -80,11 +80,11 @@
    },
    "outputs": [],
    "source": [
-    "lb, ub = -10., 10.\n",
-    "a11 = Parameter(\"a11\", 1, lb=lb, ub=ub)\n",
-    "a12 = Parameter(\"a12\", 1, lb=lb, ub=ub)\n",
-    "a21 = Parameter(\"a21\", 1, lb=lb, ub=ub)\n",
-    "a22 = Parameter(\"a22\", 1, lb=lb, ub=ub)"
+    "lb, ub, D = -10., 10., 1\n",
+    "a11 = Parameter(\"a11\", D=D, lb=lb, ub=ub)\n",
+    "a12 = Parameter(\"a12\", D=D, lb=lb, ub=ub)\n",
+    "a21 = Parameter(\"a21\", D=D, lb=lb, ub=ub)\n",
+    "a22 = Parameter(\"a22\", D=D, lb=lb, ub=ub)"
    ]
   },
   {
@@ -129,9 +129,9 @@
     "\n",
     "Emergent property inference solves the following optimization problem:\n",
     "\n",
-    "$\\underset{q_\\theta \\in Q}{\\mathrm{arg max}} \\hspace{.2cm} H(q_\\theta(z))$\n",
+    "$$\\underset{q_\\theta \\in Q}{\\mathrm{arg max}} \\hspace{.2cm} H(q_\\theta(z))$$\n",
     "\n",
-    "s.t. $\\mathbb{E}_{z \\sim q_\\theta}[ \\mathbb{E}_{x \\sim p(x \\mid z)}[T(x)]] = \\mu$.\n",
+    "$$\\text{s.t.} \\mathbb{E}_{z \\sim q_\\theta}[ \\mathbb{E}_{x \\sim p(x \\mid z)}[T(x)]] = \\mu.$$\n",
     "\n",
     "That is, EPI learns the distribution of parameters z, with maximal differential entropy $H(q_\\theta(z))$ such that the emergent property is produced.  The emergent property is defined as the emergent property statistics $T(x)$ having mean value $\\mu$ over the distribution of parameters $z \\sim q_\\theta$ and model activity $x \\sim p(x \\mid z)$.\n",
     "\n",
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To finish defining the emergent property, we must select the mean $\\mu$ to constrain the first and second moment statistics.  Since we desire a distribution of systems with close to 1Hz  oscillations, we will constrain the $\\mathbb{E}[\\text{real}(\\lambda_1)]$ to 0, and $\\mathbb{E}[\\text{imag}(\\lambda_1)]$ to $2\\pi \\omega$, where $\\omega = 1Hz$.  We allow some variation around these means from the distribution $z \\sim q_\\theta$ quantified by a standard deviation $\\sigma_{\\text{real}} = 0.5$ and $\\sigma_{\\text{imag}} = \\pi / 5$. For an explanation of the  importance of second moment constraints, see the tutorial on [conditioning maximum-entropy distributions](link).  This completes our definition of the emergent property.\n",
+    "To finish defining the emergent property, we must select the mean $\\mu$ to constrain the first and second moment statistics.  Since we desire a distribution of systems with close to 1Hz  oscillations, we will constrain the $\\mathbb{E}[\\text{real}(\\lambda_1)]$ to 0, and $\\mathbb{E}[\\text{imag}(\\lambda_1)]$ to $2\\pi f$, where $f = 1Hz$.  We allow some variation around these means from the distribution $z \\sim q_\\theta$ quantified by a standard deviation $\\sigma_{\\text{real}} = 0.5$ and $\\sigma_{\\text{imag}} = \\pi / 5$. For an explanation of the  importance of second moment constraints, see the tutorial on [conditioning maximum-entropy distributions](link).  This completes our definition of the emergent property.\n",
     "\n",
     "$\\mathbb{E}[T(x)] \\triangleq \\begin{bmatrix} \\text{real}(\\lambda_1) \\\\ \\text{imag}(\\lambda_1) \\\\ (\\text{real}(\\lambda_1) - \\mathbb{E}[\\text{real}(\\lambda_1)])^2 \\\\ (\\text{imag}(\\lambda_1) - \\mathbb{E}[\\text{imag}(\\lambda_1)])^2 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 1 \\\\ \\sigma_{\\text{real}}^2 \\\\ \\sigma_{\\text{imag}}^2 \\end{bmatrix} \\triangleq \\mu$"
    ]
@@ -479,10 +479,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, [`epi.models.Model.epi`](https://epi.readthedocs.io/en/latest/API.html#epi.models.Parameter) optimizes the chosen normalizing flow architecture (the deep generative distribution of the model parameters) to a simple initial gaussian distribution.  This is done by optimizing the weights and biases of the normalizing flow  via variational inference to be as close as possible to the gaussian distribution chosen (default is standard isotropic gaussian).  Such initializations will be loaded from a cache when they have been run before on the current instance.  Optional parameters of this method can be set to specify a non-default normalizing flow architecture.\n",
+    "First, [`epi.models.Model.epi`](https://epi.readthedocs.io/en/latest/API.html#epi.models.Model.epi) optimizes the chosen normalizing flow architecture (the deep generative distribution of the model parameters) to a simple initial gaussian distribution.  This is done by optimizing the weights and biases of the normalizing flow  via variational inference to be as close as possible to the gaussian distribution chosen (default is standard isotropic gaussian).  Such initializations will be loaded from a cache when they have been run before on the current instance.  Optional parameters of this method can be set to specify a non-default normalizing flow architecture.\n",
     "\n",
     "The method returns:\n",
-    "* `q_theta` - the inferred distribution of type [`epi.models.Distribution`](https://epi.readthedocs.io/en/latest/API.html#epi.models.Distribution) which has methods like `q_theta.sample(N)`, `q_theta.log_prob(N)`, and `q_theta.hessian(z)`,\n",
+    "* `q_theta` - the inferred distribution of type [`epi.models.Distribution`](https://epi.readthedocs.io/en/latest/API.html#epi.models.Distribution) which has methods like `q_theta.sample(N)`, `q_theta.log_prob(z)`, and `q_theta.hessian(z)`,\n",
     "* `opt_data` - a pandas dataframe containing the optimization information.\n",
     "* `save_dir` - the path to saved EPI distribution parameters, optimization information etc.\n",
     "* `flg` - a boolean flag set to False if the optimization became unstable (nans and infs).\n",
