remove old notebook and add links

--- a/notebooks/Getting_Started_with_EPI.ipynb
+++ b/notebooks/Getting_Started_with_EPI.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The epi python package implements emergent property inference (EPI) as described in [Bittner et al. 2019](https://www.biorxiv.org/content/10.1101/837567v2.abstract).  EPI learns distributions of model parameters that produce the emergent properties (or statistics) of interest, through optimization using deep learning.  EPI allows scientists to reason about the parametric sensitivity and robustness of models with respect ot the statistics (or \"emergent properties\") of their activity.  \n",
     "\n",
-    "In this tutorial, we will use EPI to infer the maximum entropy distribution of 2D linear dynamical system coefficients that produce oscillations near 1Hz.  For now, we'll focus on the basic functionality of the package.  In the subsequent tutorials, we will dive into the details of [normalizing flow architectures](https://github.com/cunningham-lab/epi/blob/master/notebooks/Normalizing_Flows.ipynb),  [augented Lagrangian optimization](https://github.com/cunningham-lab/epi/blob/master/notebooks/Augmented_Lagrangian.ipynb), and [conditioning maximum-entropy distributions](link).  Those with specific use cases can also refer to [conditioning on data](link), and [consistency equations](link).\n",
+    "In this tutorial, we will use EPI to infer the maximum entropy distribution of 2D linear dynamical system coefficients that produce oscillations near 1Hz.  For now, we'll focus on the basic functionality of the package.  In the subsequent tutorials, we will dive into the details of [normalizing flow architectures](https://github.com/cunningham-lab/epi/blob/master/notebooks/Normalizing_Flows.ipynb) and  [augented Lagrangian optimization](https://github.com/cunningham-lab/epi/blob/master/notebooks/Augmented_Lagrangian.ipynb).\n",
     "\n",
     "Throughout the tutorial, please refer to the API documentation at [https://epi.readthedocs.io/en/latest/API.html](https://epi.readthedocs.io/en/latest/API.html).\n",
     "\n",
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To finish defining the emergent property, we must select the mean $\\mu$ to constrain the first and second moment statistics.  Since we desire a distribution of systems with close to 1Hz  oscillations, we will constrain the $\\mathbb{E}[\\text{real}(\\lambda_1)]$ to 0, and $\\mathbb{E}[\\text{imag}(\\lambda_1)]$ to $2\\pi f$, where $f = 1Hz$.  We allow some variation around these means from the distribution $z \\sim q_\\theta$ quantified by a standard deviation $\\sigma_{\\text{real}} = 0.5$ and $\\sigma_{\\text{imag}} = \\pi / 5$. For an explanation of the  importance of second moment constraints, see the tutorial on [conditioning maximum-entropy distributions](link).  This completes our definition of the emergent property.\n",
+    "To finish defining the emergent property, we must select the mean $\\mu$ to constrain the first and second moment statistics.  Since we desire a distribution of systems with close to 1Hz  oscillations, we will constrain the $\\mathbb{E}[\\text{real}(\\lambda_1)]$ to 0, and $\\mathbb{E}[\\text{imag}(\\lambda_1)]$ to $2\\pi f$, where $f = 1Hz$.  We allow some variation around these means from the distribution $z \\sim q_\\theta$ quantified by a standard deviation $\\sigma_{\\text{real}} = 0.5$ and $\\sigma_{\\text{imag}} = \\pi / 5$.  This completes our definition of the emergent property.\n",
     "\n",
     "$\\mathbb{E}[T(x)] \\triangleq \\begin{bmatrix} \\text{real}(\\lambda_1) \\\\ \\text{imag}(\\lambda_1) \\\\ (\\text{real}(\\lambda_1) - \\mathbb{E}[\\text{real}(\\lambda_1)])^2 \\\\ (\\text{imag}(\\lambda_1) - \\mathbb{E}[\\text{imag}(\\lambda_1)])^2 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 1 \\\\ \\sigma_{\\text{real}}^2 \\\\ \\sigma_{\\text{imag}}^2 \\end{bmatrix} \\triangleq \\mu$"
    ]
@@ -227,7 +227,7 @@
    "source": [
     "### 3. Run emergent property inference.\n",
     "\n",
-    "Finally, we run EPI by invoking the [`epi.models.Model.epi`](https://epi.readthedocs.io/en/latest/API.html#epi.models.Parameter) method.  This method has many optional arguments, the purpose of which will become clearer in tutorials on [augented Lagrangian optimization](link) and [normalizing flow architectures](link).  The only non-optional parameter is `mu`, which predicates the emergent property values.\n",
+    "Finally, we run EPI by invoking the [`epi.models.Model.epi`](https://epi.readthedocs.io/en/latest/API.html#epi.models.Parameter) method.  This method has many optional arguments, the purpose of which will become clearer in tutorials on [augented Lagrangian optimization](https://github.com/cunningham-lab/epi/blob/master/notebooks/Augmented_Lagrangian.ipynb) and [normalizing flow architectures](https://github.com/cunningham-lab/epi/blob/master/notebooks/Normalizing_Flows.ipynb).  The only non-optional parameter is `mu`, which predicates the emergent property values.\n",
     "\n",
     "This optimization will run for a default `K=10` augmented Lagrangian epochs, each with `num_iters=1000` iterations and a batch size of `N=500`."
    ]
